// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResthookRouterForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`ResthookRouterForm > updates > coverts from other node types 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [
            {
              "resthook": "new-resthook",
              "result_name": "result",
              "type": "call_resthook",
              "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            },
          ],
          "exits": [
            {
              "destination_uuid": null,
              "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            },
            {
              "destination_uuid": null,
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "Success",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_only_text",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
            ],
            "categories": [
              {
                "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                "name": "Success",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Failure",
                "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              },
            ],
            "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "operand": "@results.result.category",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {},
          "position": null,
          "type": "split_by_resthook",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResthookRouterForm > updates > creates its own action uuid if necessary 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [
            {
              "resthook": "new-resthook",
              "result_name": "Result",
              "type": "call_resthook",
              "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
            },
          ],
          "exits": [
            {
              "destination_uuid": null,
              "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
            },
            {
              "destination_uuid": null,
              "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "Success",
                ],
                "category_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
                "type": "has_only_text",
                "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
              },
            ],
            "categories": [
              {
                "exit_uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
                "name": "Success",
                "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
              },
              {
                "exit_uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
                "name": "Failure",
                "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
              },
            ],
            "default_category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
            "operand": "@results.result.category",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {},
          "position": null,
          "type": "split_by_resthook",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResthookRouterForm > updates > should update and save 1`] = `
{
  "resthook": {
    "validationFailures": [],
    "value": {
      "name": "new-resthook",
      "resthook": "new-resthook",
      "type": "resthook",
    },
  },
  "resultName": {
    "value": "result",
  },
  "valid": true,
}
`;

exports[`ResthookRouterForm > updates > should update and save 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [
            {
              "resthook": "new-resthook",
              "result_name": "result",
              "type": "call_resthook",
              "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            },
          ],
          "exits": [
            {
              "destination_uuid": null,
              "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            },
            {
              "destination_uuid": null,
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "Success",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_only_text",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
            ],
            "categories": [
              {
                "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                "name": "Success",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Failure",
                "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              },
            ],
            "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "operand": "@results.result.category",
            "type": "switch",
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {},
          "position": null,
          "type": "split_by_resthook",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
